Fix tooltip styles
Center tooltip arrow alignment on left/right side

The arrow still has small gap, when the tooltip is to the left/right,
because of the rounded ends.

--- a/frontend/src/shared.scss
+++ b/frontend/src/shared.scss
@@ -319,7 +319,7 @@ form {
   }
 }
 
-.tooltip-base {
+.tooltip {
   @extend .shadow-tooltip;
 
   background: white;
@@ -334,12 +334,7 @@ form {
   color: $COLOR_BLACK100;
 
   padding: 10px 17px;
-  margin: 0px 10px;
-}
-
-.tooltip {
-  @extend .tooltip-base;
-  margin: 0px 0px 10px 0px;
+  margin: auto;
 }
 
 .tooltipArrow {
